static/css/chatBot_lightmode.css
/* ... */
.chat_ib h5 span {
  font-size: 13px;
  float: right;
}

.chat_ib p {
  font-size: 12px;
  color: #989898;
  margin: auto;
  display: inline-block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.chat_img {
  float: left;
  width: 11%;
}

.chat_img img {
  width: 100%;
}

.chat_ib {
  float: left;
  padding: 0 0 0 15px;
  width: 88%;
}

.chat_people {
  overflow: hidden;
  clear: both;
}

.chat_list {
  border-bottom: 1px solid #ddd;
  margin: 0;
  padding: 18px 16px 10px;
}

.inbox_chat {
  height: 550px;
  overflow-y: scroll;
}

.active_chat {
  background: #e8f6ff;
}

.incoming_msg {
  margin: 0;
  height: 703px;
  /* margin: 1px 23px 0px 23px; */
  overflow-y: scroll;
  padding-bottom: 36px;
}
.received_msg {
  /* margin-top: 54px; */
  display: inline-block;
  padding: 22px 10px 0px 10px;
  vertical-align: top;
  width: 100%;
}

.received_withd_msg p {
  background: #F1F3F9 none repeat scroll 0 0;
  /* border: 2px solid #974CE8; */
  border-radius: 10px 10px 10px 10px;
  color: #272C3A;
  font-size: 14px;
  margin: 0;
  padding: 15px 15px;
  width: 100%;
  font-family: "roboto", sans-serif;;
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  line-height: 27px;
  word-break: break-word;
}

.received_withd_msg img {
  /* background: #3b2a50 none repeat scroll 0 0; */
  border-radius: 10px 10px 10px 10px;
  color: #ffffff;
  font-size: 14px;
  margin: 0;
  padding: 3px 3px;
  width: 100%;
  font-family: "roboto", sans-serif;;
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  line-height: 27px;
  word-break: break-word;
  cursor: pointer;
}

.received_withd_msg {
  width: 33%;
}

.sent_msg {
  float: right;
  /* width: 33%; */
}

/* .mesgs {
  width: 100%;
} */

.sent_msg p {
  background: #974CE8;
  border-radius: 10px 10px 10px 10px;
  margin: 0;
  color: #fff;
  padding: 15px 15px;
  /* width: 100%; */
  font-family: "roboto", sans-serif;;
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  line-height: 27px;
  word-break: break-word;
}

.outgoing_msg {
  overflow: hidden;
  margin: 0 0 26px;
}

textarea {
  resize: none;
  overflow: hidden;
  font-size: 18px;
  height: 1.1em;
}

.msg_send_btn {
  background: #974CE8 none repeat scroll 0 0;
  border: none;
  border-radius: 50%;
  color: #fff;
  cursor: pointer;
  font-size: 15px;
  height: 33px;
  position: absolute;
  right: 0;
  left: 76%;
  width: 33px;
  bottom: 8px;
}

/* .messaging {
  height: 100%;
} */

/* .msg_history {
  height: 100%;
} */

.modalNewBody {
  background-color: #974CE8;
  border-top-left-radius: 0;
  border-top-right-radius: 125px;
  border-bottom-left-radius: 125px;
  border-bottom-right-radius: 0;
  width: 29%;
  margin: 0 auto;
}
.popUpContent {
  color: #fff;
  padding: 25px 20px;
  font-family: "roboto", sans-serif;;
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  line-height: 27px;
}
.startButton {
  text-align: right;
  border-radius: 20px;
  border: 0;
  text-align: center;
}
.startButton button {
  border-radius: 20px;
  width: 150px;
  padding: 7px;
  background: #974CE8;
  border: 0;
  font-weight: bolder;
  color: #fff;
  font-size: 20px;
  font-family: "roboto", sans-serif;;
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  line-height: 27px;
}
/* body.modal-open .chatUi {
  -webkit-filter: blur(15px);
  -moz-filter: blur(15px);
  -o-filter: blur(15px);
  -ms-filter: blur(15px);
  filter: blur(15px);
} */
button:focus {
  outline: 0;
}
div#wave {
  position: relative;
  padding: 5px 20px;
  padding-bottom: 110px;
}
.modal-title{
  position: absolute;
  width: 98px;
  height: 30px;
  left: 30px;
  /* top: 59px; */
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 700;
  font-size: 26px;
  line-height: 30px;
  color: #974CE8;
}
.setting_btn{
  padding: 22px;
  background-color: transparent;
  border-color: transparent;
}
.modal-content{
  width: 80%;
  height: 100%;
}
iframe {
  display:block;
  /* width:80%;
  height: 100%; */
}
div#wave .dot {
  display: inline-block;
  width: 15px;
  height: 15px;
  border-radius: 50%;
  margin-right: 3px;
  background: #272C3A;
  animation: wave 1.3s linear infinite;
}
div#wave .dot:nth-child(2) {
  animation-delay: -1.1s;
}
div#wave .dot:nth-child(3) {
  animation-delay: -0.9s;
}

#paddingAtBottom.paddingAtBottom {
  padding-bottom: 20px;
}

@keyframes wave {
  0%,
  60%,
  100% {
    transform: initial;
  }
  30% {
    transform: translateY(-15px);
  }
}

/* .quickReplies {
  overflow: hidden; */
  /* -ms-overflow-style: none; /* IE 11 */
  /* scrollbar-width: none; Firefox 64 */ 
  /* text-align: center;
} */
.type_msg-responsecards {
  position: fixed;
  bottom: 0px;
  /* left: 0;  */
  /* padding-left: 0; */
  background-color: #ffffff;
  width: 100%;
  /* overflow: hidden; */
  /* overflow-x: scroll;
  overflow-y: hidden; */
  /* white-space: nowrap; */
  text-align: center;
}

/* #quickReplies { */
  /* overflow: hidden; */
  /* display: inline-block; */
  /* white-space: nowrap; */
  /* overflow-x: scroll; */
  /* width: 100%; */
  /* -ms-overflow-style: none; IE 11 */
  /* scrollbar-width: none; Firefox 64 */
/* } */
.replies{
  color: #ffffff;
  border: 2px solid #974CE8;
  border-radius: 8px;
  padding: 5px;
  margin-right: 5px;
  margin-bottom: 10px;
  /* display: inline-block; */
  /* position: relative; */
  /* text-align: center; */
  font-family: "roboto", sans-serif;;
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  /* line-height: 27px; */
  /* max-width: 90%; */
  background-color: #974CE8;
  /* word-wrap: break-word; */
  /* overflow: hidden; */
}

.replies p {
  margin: 0;
}

.congrats-modal {
  text-align: center;
  font-family: "roboto", sans-serif;;
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  line-height: 27px;
}
.popUpContentNew h5 {
  font-weight: bolder;
}
/* ... */

